# ojs-indexing

./: Notebook.ipynb  README.md  pyproject.toml
data/: dimensions-indexed-issns.csv
